--- a/NetApp.Security/NetApp.Security.csproj
+++ b/NetApp.Security/NetApp.Security.csproj
@@ -7,9 +7,9 @@
     <PackageProjectUrl>https://github.com/zsu/NetApp.Security</PackageProjectUrl>
     <RepositoryUrl>https://github.com/zsu/NetApp.Security</RepositoryUrl>
     <PackageTags>Security, Ldap, Active Directory, .Net</PackageTags>
-    <AssemblyVersion>1.1.0.0</AssemblyVersion>
-    <FileVersion>1.1.0.0</FileVersion>
-    <Version>7.0.0</Version>
+    <AssemblyVersion></AssemblyVersion>
+    <FileVersion></FileVersion>
+    <Version>7.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="NetApp.Common" Version="2.0.0" />
+    <PackageReference Include="NetApp.Common" Version="3.0.0" />
     <PackageReference Include="System.DirectoryServices.Protocols" Version="7.0.0" />
   </ItemGroup>
 
