--- a/NetApp.Security.Windows/NetApp.Security.Windows.csproj
+++ b/NetApp.Security.Windows/NetApp.Security.Windows.csproj
@@ -1,11 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <Authors>Zhicheng Su</Authors>
-    <Version>5.9.1</Version>
+    <Version>6.0</Version>
     <Description>Ldap library for .Net</Description>
     <Copyright>Zhicheng Su</Copyright>
     <PackageTags>Security, Ldap, Active Directory, .Net</PackageTags>
