--- a/NetApp.Security.Windows/NetApp.Security.Windows.csproj
+++ b/NetApp.Security.Windows/NetApp.Security.Windows.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Authors>Zhicheng Su</Authors>
-    <Version>7.6.0</Version>
+    <Version>7.7.0</Version>
     <Description>Ldap library for .Net</Description>
     <Copyright>Zhicheng Su</Copyright>
     <PackageTags>Security, Ldap, Active Directory, .Net</PackageTags>
@@ -13,7 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="System.DirectoryServices.Protocols" Version="9.0.0" />
-    <PackageReference Include="System.Drawing.Common" Version="9.0.0" />
+    <PackageReference Include="SkiaSharp" Version="2.88.8" />
   </ItemGroup>
 
   <ItemGroup>
